--- a/charts/ibm-mq/templates/stateful-set.yaml
+++ b/charts/ibm-mq/templates/stateful-set.yaml
@@ -281,6 +281,13 @@ spec:
             In our case we want to explicitly set if it is NOT unset, hence the reason for the complex IF
             statement.
           */}}
+          {{- range $index, $source := .Values.queueManager.envVariables }}
+          - name: {{ $source.name }}
+            valueFrom:
+              secretKeyRef:
+                name: {{ $source.valueFrom.secretKeyRef.name }}
+                key: {{ $source.valueFrom.secretKeyRef.key }}
+          {{- end }}
           {{- if or .Values.web.enable (eq .Values.web.enable false)}}
           - name: MQ_ENABLE_EMBEDDED_WEB_SERVER
             value: "{{ .Values.web.enable | default false }}"
