Fix: Try running with Helm secrets

--- a/charts/ibm-mq/templates/stateful-set.yaml
+++ b/charts/ibm-mq/templates/stateful-set.yaml
@@ -281,13 +281,16 @@ spec:
             In our case we want to explicitly set if it is NOT unset, hence the reason for the complex IF
             statement.
           */}}
-          {{- range .Values.queueManager.envVariables }}
-          - name: {{ .name }}
+          - name: MQ_ADMIN_PASSWORD
             valueFrom:
               secretKeyRef:
-                name: {{ .valueFrom.secretKeyRef.name }}
-                key: {{ .valueFrom.secretKeyRef.key }}
-          {{- end }}
+                name: mq-secrets
+                key: mq-admin-password
+          - name: MQ_APP_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: mq-secrets
+                key: mq-app-password
           {{- if or .Values.web.enable (eq .Values.web.enable false)}}
           - name: MQ_ENABLE_EMBEDDED_WEB_SERVER
             value: "{{ .Values.web.enable | default false }}"
