Add cron job for RQSTR channels

--- a/charts/ibm-mq/templates/stateful-set.yaml
+++ b/charts/ibm-mq/templates/stateful-set.yaml
@@ -255,6 +255,14 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           terminationMessagePath: "/run/termination-log"
+          volumeMounts:
+            - name: mq-monitor-script
+              mountPath: /etc/mq-monitor/monitor_channels.sh
+              subPath: monitor_channels.sh
+          volumes:
+            - name: mq-monitor-script
+              configMap:
+                name: mq-monitoring-script
           ports:
           - containerPort: 1414
           - containerPort: 9443
