--- a/charts/ibm-mq/templates/configmap-mq-monitoring.yaml
+++ b/charts/ibm-mq/templates/configmap-mq-monitoring.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: mq-monitoring-script
-  namespace: { { .Release.Namespace } }
+  namespace: "{{ .Release.Namespace }}"
 data:
   monitor_channels.sh: |
     #!/bin/bash
