Create file in the specified dir

--- a/charts/ibm-mq/templates/stateful-set.yaml
+++ b/charts/ibm-mq/templates/stateful-set.yaml
@@ -490,25 +490,24 @@ spec:
           - /bin/sh
           - -c
           - |
+            echo "#!/bin/bash
+            QMGR=\"KSLNONPRODMQ1\"
+            CHANNELS=(\"EQLSG1Q1.KSL.C1\" \"EQLSG1Q1.KSL.C2\" \"EQLSG2Q1.KSL.C1\" \"EQLSG2Q1.KSL.C2\")
+            echo \"Starting channel monitoring...\"
+            for CHANNEL in \"\${CHANNELS[@]}\"; do
+                OUTPUT=\$(echo \"DISPLAY CHSTATUS(\$CHANNEL)\" | runmqsc \$QMGR)
+                echo \"Raw output for \$CHANNEL:\"
+                echo \"\$OUTPUT\"
+                if echo \"\$OUTPUT\" | grep -q \"AMQ8420I: Channel Status not found.\"; then
+                    echo \"Channel \$CHANNEL is inactive. Restarting...\"
+                    echo \"START CHANNEL(\$CHANNEL)\" | runmqsc \$QMGR
+                else
+                    echo \"Channel \$CHANNEL is active or in another state.\"
+                fi
+            done" > /var/mqm/monitor_channels.sh
+            chmod +x /var/mqm/monitor_channels.sh
             while true; do
-              #!/bin/bash
-              QMGR="KSLNONPRODMQ1"
-              CHANNELS=("EQLSG1Q1.KSL.C1" "EQLSG1Q1.KSL.C2" "EQLSG2Q1.KSL.C1" "EQLSG2Q1.KSL.C2")
-
-              echo "Starting channel monitoring..."
-
-              for CHANNEL in "${CHANNELS[@]}"; do
-                  OUTPUT=$(echo "DISPLAY CHSTATUS($CHANNEL)" | runmqsc $QMGR)
-                  echo "Raw output for $CHANNEL:"
-                  echo "$OUTPUT"
-
-                  if echo "$OUTPUT" | grep -q "AMQ8420I: Channel Status not found."; then
-                      echo "Channel $CHANNEL is inactive. Restarting..."
-                      echo "START CHANNEL($CHANNEL)" | runmqsc $QMGR
-                  else
-                      echo "Channel $CHANNEL is active or in another state."
-                  fi
-              done
+              /bin/bash /var/mqm/monitor_channels.sh
               sleep 300
             done
       {{- if .Values.security.initVolumeAsRoot }}
