--- a/charts/ibm-mq/templates/stateful-set.yaml
+++ b/charts/ibm-mq/templates/stateful-set.yaml
@@ -253,6 +253,9 @@ spec:
       containers:
         - name: qmgr
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          volumeMounts:
+            - name: mqm-shared-volume
+              mountPath: /var/mqm
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           terminationMessagePath: "/run/termination-log"
           ports:
@@ -485,6 +488,9 @@ spec:
 {{ toYaml .Values.resources.requests | indent 14 }}
         - name: monitoring-sidecar
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          volumeMounts:
+            - name: mqm-shared-volume
+              mountPath: /var/mqm
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           command:
           - /bin/sh
@@ -558,6 +564,9 @@ spec:
               drop:
                 - ALL
       {{- end }}
+  volumes:
+    - name: mqm-shared-volume
+      emptyDir: {}
   volumeClaimTemplates:
   {{- if and (.Values.persistence.dataPVC.enable) (eq .Values.queueManager.multiinstance.enable false) }}
   - metadata:
