--- a/charts/ibm-mq/templates/stateful-set.yaml
+++ b/charts/ibm-mq/templates/stateful-set.yaml
@@ -254,48 +254,6 @@ spec:
         - name: qmgr
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          volumeMounts:
-            - name: mqm-shared-volume
-              mountPath: /var/mqm
-          command:
-          - /bin/sh
-          - -c
-          - |
-            # Start the MQ server in the background
-            runmqserver &
-
-            # Wait for the MQ queue manager to be fully initialized
-            while ! echo "DISPLAY QMSTATUS" | runmqsc KSLNONPRODMQ1 | grep -q "QMSTATUS"; do
-              echo "Waiting for the queue manager to start..."
-              sleep 10
-            done
-
-            echo "#!/bin/bash
-            QMGR=\"KSLNONPRODMQ1\"
-            CHANNELS=(\"EQLSG1Q1.KSL.C1\" \"EQLSG1Q1.KSL.C2\" \"EQLSG2Q1.KSL.C1\" \"EQLSG2Q1.KSL.C2\")
-            echo \"Starting channel monitoring...\"
-            for CHANNEL in \"\${CHANNELS[@]}\"; do
-                OUTPUT=\$(echo \"DISPLAY CHSTATUS(\$CHANNEL)\" | runmqsc \$QMGR)
-                echo \"Raw output for \$CHANNEL:\"
-                echo \"\$OUTPUT\"
-                if echo \"\$OUTPUT\" | grep -q \"AMQ8420I: Channel Status not found.\"; then
-                    echo \"Channel \$CHANNEL is inactive. Restarting...\"
-                    echo \"START CHANNEL(\$CHANNEL)\" | runmqsc \$QMGR
-                else
-                    echo \"Channel \$CHANNEL is active or in another state.\"
-                fi
-            done" > /var/mqm/monitor_channels.sh
-            
-            chmod +x /var/mqm/monitor_channels.sh
-            
-            # Run the monitoring script in a loop
-            while true; do
-              /bin/bash /var/mqm/monitor_channels.sh
-              sleep 300
-            done
-
-            # Wait for the MQ server to exit
-            wait
           terminationMessagePath: "/run/termination-log"
           ports:
           - containerPort: 1414
@@ -525,6 +483,42 @@ spec:
 {{ toYaml .Values.resources.limits | indent 14 }}
             requests:
 {{ toYaml .Values.resources.requests | indent 14 }}
+        lifecycle:
+          postStart:
+            exec:
+              command:
+                - /bin/sh
+                - -c
+                - |
+                  # Wait for the MQ queue manager to be fully initialized
+                  while ! echo "DISPLAY QMSTATUS" | runmqsc KSLNONPRODMQ1 | grep -q "QMSTATUS"; do
+                    echo "Waiting for the queue manager to start..."
+                    sleep 10
+                  done
+
+                  echo "#!/bin/bash
+                  QMGR=\"KSLNONPRODMQ1\"
+                  CHANNELS=(\"EQLSG1Q1.KSL.C1\" \"EQLSG1Q1.KSL.C2\" \"EQLSG2Q1.KSL.C1\" \"EQLSG2Q1.KSL.C2\")
+                  echo \"Starting channel monitoring...\"
+                  for CHANNEL in \"\${CHANNELS[@]}\"; do
+                      OUTPUT=\$(echo \"DISPLAY CHSTATUS(\$CHANNEL)\" | runmqsc \$QMGR)
+                      echo \"Raw output for \$CHANNEL:\"
+                      echo \"\$OUTPUT\"
+                      if echo \"\$OUTPUT\" | grep -q \"AMQ8420I: Channel Status not found.\"; then
+                          echo \"Channel \$CHANNEL is inactive. Restarting...\"
+                          echo \"START CHANNEL(\$CHANNEL)\" | runmqsc \$QMGR
+                      else
+                          echo \"Channel \$CHANNEL is active or in another state.\"
+                      fi
+                  done" > /var/mqm/monitor_channels.sh
+
+                  chmod +x /var/mqm/monitor_channels.sh
+
+                  # Run the monitoring script in a loop
+                  while true; do
+                    /bin/bash /var/mqm/monitor_channels.sh
+                    sleep 300
+                  done
       {{- if .Values.security.initVolumeAsRoot }}
       initContainers:
         - name: qmgr-init
