--- a/charts/ibm-mq/templates/stateful-set.yaml
+++ b/charts/ibm-mq/templates/stateful-set.yaml
@@ -490,35 +490,9 @@ spec:
               - /bin/sh
               - -c
               - |
-                # Wait for the MQ queue manager to be fully initialized
-                while ! echo "DISPLAY QMSTATUS" | runmqsc KSLNONPRODMQ1 | grep -q "QMSTATUS"; do
-                  echo "Waiting for the queue manager to start..."
-                  sleep 10
-                done
-
-                echo "#!/bin/bash
-                QMGR=\"KSLNONPRODMQ1\"
-                CHANNELS=(\"EQLSG1Q1.KSL.C1\" \"EQLSG1Q1.KSL.C2\" \"EQLSG2Q1.KSL.C1\" \"EQLSG2Q1.KSL.C2\")
-                echo \"Starting channel monitoring...\"
-                for CHANNEL in \"\${CHANNELS[@]}\"; do
-                    OUTPUT=\$(echo \"DISPLAY CHSTATUS(\$CHANNEL)\" | runmqsc \$QMGR)
-                    echo \"Raw output for \$CHANNEL:\"
-                    echo \"\$OUTPUT\"
-                    if echo \"\$OUTPUT\" | grep -q \"AMQ8420I: Channel Status not found.\"; then
-                        echo \"Channel \$CHANNEL is inactive. Restarting...\"
-                        echo \"START CHANNEL(\$CHANNEL)\" | runmqsc \$QMGR
-                    else
-                        echo \"Channel \$CHANNEL is active or in another state.\"
-                    fi
-                done" > /var/mqm/monitor_channels.sh
-
-                chmod +x /var/mqm/monitor_channels.sh
-
-                # Run the monitoring script in a loop
-                while true; do
-                  /bin/bash /var/mqm/monitor_channels.sh
-                  sleep 300
-                done
+                echo "PostStart Hook Running" >> /var/log/poststart.log 2>&1
+                # Your existing commands...
+                echo "PostStart Hook Completed" >> /var/log/poststart.log 2>&1
       {{- if .Values.security.initVolumeAsRoot }}
       initContainers:
         - name: qmgr-init
