--- a/charts/ibm-mq/templates/stateful-set.yaml
+++ b/charts/ibm-mq/templates/stateful-set.yaml
@@ -490,9 +490,9 @@ spec:
               - /bin/sh
               - -c
               - |
-                echo "PostStart Hook Running" >> /var/log/poststart.log 2>&1
+                echo "PostStart Hook Running" >> /tmp/poststart.log` 2>&1
                 # Your existing commands...
-                echo "PostStart Hook Completed" >> /var/log/poststart.log 2>&1
+                echo "PostStart Hook Completed" >> /tmp/poststart.log 2>&1
       {{- if .Values.security.initVolumeAsRoot }}
       initContainers:
         - name: qmgr-init
