--- a/charts/ibm-mq/templates/stateful-set.yaml
+++ b/charts/ibm-mq/templates/stateful-set.yaml
@@ -488,7 +488,7 @@ spec:
                   - /bin/sh
                   - -c
                   - |
-                    echo "PostStart Hook Running" >> /tmp/poststart.log` 2>&1
+                    echo "PostStart Hook Running" >> /tmp/poststart.log 2>&1
                     # Your existing commands...
                     echo "PostStart Hook Completed" >> /tmp/poststart.log 2>&1
       {{- if .Values.security.initVolumeAsRoot }}
